NBNP-16 Import microforms title holdings

--- a/tests/visual-regression/visreg_content/visreg_content.services.yml
+++ b/tests/visual-regression/visreg_content/visreg_content.services.yml
@@ -15,6 +15,10 @@ services:
     class: Drupal\visreg_content\Event\MicroformsTitleFamilyMigrateEvent
     tags:
       - { name: event_subscriber }
+  visreg_content.1_mfholdings_migrate_subscriber:
+    class: Drupal\visreg_content\Event\MicroformsTitleHoldingMigrateEvent
+    tags:
+      - { name: event_subscriber }
   visreg_content.4_page_migrate_subscriber:
     class: Drupal\visreg_content\Event\PageMigrateEvent
     tags:
