NBNP-16 Add succ relationships

--- a/tests/visual-regression/visreg_content/visreg_content.services.yml
+++ b/tests/visual-regression/visreg_content/visreg_content.services.yml
@@ -23,6 +23,10 @@ services:
     class: Drupal\visreg_content\Event\MicroformsTitlePrecMigrateEvent
     tags:
       - { name: event_subscriber }
+  visreg_content.1_mfsucc_migrate_subscriber:
+    class: Drupal\visreg_content\Event\MicroformsTitleSucMigrateEvent
+    tags:
+      - { name: event_subscriber }
   visreg_content.4_page_migrate_subscriber:
     class: Drupal\visreg_content\Event\PageMigrateEvent
     tags:
