--- a/config-yml/field.field.node.publication.field_supplemental_information.yml
+++ b/config-yml/field.field.node.publication.field_supplemental_information.yml
@@ -12,7 +12,7 @@ field_name: field_supplemental_information
 entity_type: node
 bundle: publication
 label: 'Broad Title History'
-description: '<b>Example:</b> PDF of title tree image'
+description: '<b>Example:</b> PDF of title tree image illustrating the complete publication history.'
 required: false
 translatable: false
 default_value: {  }
