--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -44,8 +44,10 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  rest: 0
   search_api: 0
   search_api_db: 0
+  serialization: 0
   serials: 0
   system: 0
   taxonomy: 0
@@ -60,6 +62,7 @@ module:
   menu_link_content: 1
   pathauto: 1
   views: 10
+  serial_holding: 100
   newspapers: 1000
 theme:
   bootstrap: 0
