Change search url

--- a/config-yml/views.view.elastic_search.yml
+++ b/config-yml/views.view.elastic_search.yml
@@ -516,7 +516,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: elastic-search
+      path: search
     cache_metadata:
       max-age: -1
       contexts:
