NBNP-45 Add HTML5 date widget support for exposed date filters

--- a/custom/modules/newspapers_core/newspapers_core.libraries.yml
+++ b/custom/modules/newspapers_core/newspapers_core.libraries.yml
@@ -6,3 +6,9 @@ pubform:
     js/pub-form.js: {}
   dependencies:
      - core/jquery
+
+views-exposed-filters:
+  js:
+    js/newspapers_core.views_exposed_filters.js: {}
+  dependencies:
+  - core/jquery
