--- a/config-yml/bootstrap.settings.yml
+++ b/config-yml/bootstrap.settings.yml
@@ -5,7 +5,7 @@ _core:
 favicon:
   mimetype: image/vnd.microsoft.icon
   path: ''
-  url: ''
+  url: 'http://localhost:3095/themes/contrib/bootstrap/favicon.ico'
   use_default: true
 features:
   comment_user_picture: true
@@ -16,3 +16,6 @@ logo:
   path: ''
   url: ''
   use_default: true
+breadcrumb_home: 1
+table_responsive: '-1'
+table: ''
