NBNP-49 Disable and remove elasticsearch

--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -23,8 +23,6 @@ module:
   digital_serial_title: 0
   dynamic_page_cache: 0
   editor: 0
-  elasticsearch_connector: 0
-  elasticsearch_connector_views: 0
   field: 0
   field_group: 0
   field_ui: 0
@@ -47,6 +45,7 @@ module:
   rest: 0
   search_api: 0
   search_api_db: 0
+  search_api_solr: 0
   serialization: 0
   serials: 0
   system: 0
