NBNP-48 Page View/owl carousel tweaks

--- a/config-yml/views.view.digital_serial_issue_page_list.yml
+++ b/config-yml/views.view.digital_serial_issue_page_list.yml
@@ -369,7 +369,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: "<figure class=\"text-center\">\n{{ page_image__target_id }}\n<figcaption>\nPage {{ page_no }}\n</figcaption>\n</figure>"
+            text: "<figure class=\"text-center\">\n{{ page_image__target_id }}\n<figcaption>\n<i class=\"glyphicon glyphicon-zoom-in\"></i>Zoomable high-resolution image of page {{ page_no }}\n</figcaption>\n</figure>"
             make_link: true
             path: '/serials/{{ parent_title }}/issues/{{  parent_issue }}/pages/{{ id }}'
             absolute: false
