--- a/config-yml/search_api.server.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.server.solr_newspapers_lib_unb_ca.yml
@@ -5,14 +5,14 @@ dependencies:
   module:
     - search_api_solr
 id: solr_newspapers_lib_unb_ca
-name: solr.newspapers.lib.unb.ca
+name: drupal-solr-lib-unb-ca
 description: ''
 backend: search_api_solr
 backend_config:
   connector: standard
   connector_config:
     scheme: http
-    host: gauntlet.hil.unb.ca
+    host: drupal-solr-lib-unb-ca
     port: '8983'
     path: /solr
     core: newspapers.lib.unb.ca
@@ -24,6 +24,6 @@ backend_config:
     http_method: AUTO
   retrieve_data: false
   highlight_data: false
-  skip_schema_check: false
+  skip_schema_check: true
   domain: generic
   site_hash: false
