--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -4,9 +4,21 @@ status: true
 dependencies:
   module:
     - search_api_solr
+    - taxonomy
     - search_api
     - node
   config:
+    - field.storage.node.field_additional_indexed_text
+    - field.storage.node.field_description
+    - field.storage.node.field_family
+    - field.storage.node.field_frequency
+    - field.storage.node.field_issn
+    - field.storage.node.field_oclc
+    - field.storage.node.field_place_of_publication
+    - field.storage.node.field_publisher
+    - field.storage.node.field_subject_notes
+    - field.storage.node.field_subjects
+    - field.storage.node.field_title_notes
     - search_api.server.solr_newspapers_lib_unb_ca
 third_party_settings:
   search_api_solr:
@@ -18,6 +30,114 @@ name: newspapers.lib.unb.ca
 description: ''
 read_only: false
 field_settings:
+  administrative_area_name:
+    label: 'Place of Publication » The full name of the country subdivision (i.e. province).'
+    datasource_id: 'entity:node'
+    property_path: 'field_place_of_publication:administrative_area_name'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_place_of_publication
+  country_name:
+    label: 'Place of Publication » The full name of the country.'
+    datasource_id: 'entity:node'
+    property_path: 'field_place_of_publication:country_name'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_place_of_publication
+  field_additional_indexed_text:
+    label: 'Additional indexed text'
+    datasource_id: 'entity:node'
+    property_path: field_additional_indexed_text
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_additional_indexed_text
+  field_description:
+    label: Description
+    datasource_id: 'entity:node'
+    property_path: field_description
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_description
+  field_frequency:
+    label: Frequency
+    datasource_id: 'entity:node'
+    property_path: field_frequency
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_frequency
+  field_issn:
+    label: ISSN
+    datasource_id: 'entity:node'
+    property_path: field_issn
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_issn
+  field_oclc:
+    label: OCLC
+    datasource_id: 'entity:node'
+    property_path: field_oclc
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_oclc
+  field_subject_notes:
+    label: 'Subject Notes'
+    datasource_id: 'entity:node'
+    property_path: field_subject_notes
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_subject_notes
+  field_subjects:
+    label: Subjects
+    datasource_id: 'entity:node'
+    property_path: field_subjects
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_subjects
+  field_title_notes:
+    label: 'Title Notes'
+    datasource_id: 'entity:node'
+    property_path: field_title_notes
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_title_notes
+  locality:
+    label: 'Place of Publication » The locality (i.e. city).'
+    datasource_id: 'entity:node'
+    property_path: 'field_place_of_publication:locality'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_place_of_publication
+  name:
+    label: 'Family Name » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_family:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_family
+      module:
+        - taxonomy
+  name_1:
+    label: 'Publisher » Taxonomy term » Name'
+    datasource_id: 'entity:node'
+    property_path: 'field_publisher:entity:name'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_publisher
+      module:
+        - taxonomy
   status:
     label: Published
     datasource_id: 'entity:node'
@@ -29,7 +149,7 @@ field_settings:
     property_path: title
     type: text
   uid:
-    label: null
+    label: uid
     datasource_id: 'entity:node'
     property_path: uid
     type: integer
