--- a/config-yml/facets.facet_source.search_api__views_page__search__search_page.yml
+++ b/config-yml/facets.facet_source.search_api__views_page__search__search_page.yml
@@ -4,7 +4,7 @@ status: true
 dependencies: {  }
 id: search_api__views_page__search__search_page
 name: 'search_api:views_page__search__search_page'
-filter_key: 'Custom Views Search'
+filter_key: ''
 url_processor: query_string
 breadcrumb:
   active: false
