--- a/config-yml/block.block.country.yml
+++ b/config-yml/block.block.country.yml
@@ -1,26 +1,26 @@
-uuid: 5f391d6e-b616-4308-a194-6c6717651068
+uuid: 9b9a9fe8-56a5-4bbf-8744-ec4dffe92e3f
 langcode: en
 status: true
 dependencies:
   config:
-    - facets.facet.place_of_publication_country_
+    - facets.facet.country
   module:
     - facets
     - system
   theme:
     - newspapers_lib_unb_ca
-id: placeofpublicationcountryfacet
+id: country
 theme: newspapers_lib_unb_ca
 region: sidebar_first
 weight: 0
 provider: null
-plugin: 'facet_block:place_of_publication_country_'
+plugin: 'facet_block:country'
 settings:
-  id: 'facet_block:place_of_publication_country_'
+  id: 'facet_block:country'
   label: Country
   provider: facets
   label_display: '0'
-  block_id: placeofpublicationcountryfacet
+  block_id: country
 visibility:
   request_path:
     id: request_path
