--- a/config-yml/facets.facet.province_state.yml
+++ b/config-yml/facets.facet.province_state.yml
@@ -1,4 +1,4 @@
-uuid: f470a3d9-86ea-447b-afbd-f167175919f3
+uuid: 6179bf21-2c25-48c6-a055-da090dc3d0d7
 langcode: en
 status: true
 dependencies:
@@ -7,19 +7,19 @@ dependencies:
     - views.view.search
   module:
     - search_api
-id: state_province
-name: State/Province
-url_alias: state_province
+id: province_state
+name: Province/State
+url_alias: province_state
 weight: 0
 min_count: 1
-show_only_one_result: true
-field_identifier: administrative_area_name_1
+show_only_one_result: false
+field_identifier: administrative_area_name_facet
 facet_source_id: 'search_api:views_page__search__search_page'
 widget:
   type: checkbox
   config:
     show_numbers: true
-    soft_limit: 0
+    soft_limit: 10
     soft_limit_settings:
       show_less_label: 'Show less'
       show_more_label: 'Show more'
@@ -31,13 +31,6 @@ hard_limit: 0
 exclude: false
 only_visible_when_facet_source_is_visible: true
 processor_configs:
-  count_limit:
-    processor_id: count_limit
-    weights:
-      build: 50
-    settings:
-      minimum_items: 1
-      maximum_items: null
   count_widget_order:
     processor_id: count_widget_order
     weights:
