--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -10,11 +10,11 @@ dependencies:
   config:
     - field.storage.node.field_additional_indexed_text
     - field.storage.node.field_description
+    - field.storage.node.field_place_of_publication
     - field.storage.node.field_family
     - field.storage.node.field_frequency
     - field.storage.node.field_issn
     - field.storage.node.field_oclc
-    - field.storage.node.field_place_of_publication
     - field.storage.node.field_publisher
     - field.storage.node.field_subject_notes
     - field.storage.node.field_subjects
@@ -131,6 +131,14 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: 'field_place_of_publication:locality'
     type: text
+    dependencies:
+      config:
+        - field.storage.node.field_place_of_publication
+  locality_facet:
+    label: 'Facet » locality (i.e. city).'
+    datasource_id: 'entity:node'
+    property_path: 'field_place_of_publication:locality'
+    type: string
     dependencies:
       config:
         - field.storage.node.field_place_of_publication
