--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.storage.node.field_description
     - field.storage.node.field_place_of_publication
     - field.storage.node.field_family
+    - field.storage.node.field_first_issue_date
     - field.storage.node.field_frequency
     - field.storage.node.field_issn
     - field.storage.node.field_oclc
@@ -78,6 +79,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_description
+  field_first_issue_date:
+    label: 'First Issue Date Range'
+    datasource_id: 'entity:node'
+    property_path: field_first_issue_date
+    type: date
+    dependencies:
+      config:
+        - field.storage.node.field_first_issue_date
   field_frequency:
     label: Frequency
     datasource_id: 'entity:node'
